<resources>
    <string name="app_name" translatable="false">eTourism</string>
    <string name="settings_name" translatable="false">Settings</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_description">
        Your user ID is [XXXX]. This ID is shared with everyone and send it to your friend.
    </string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="friendlist">Friend List</string>
    <string name="no_friendlist">No Friends Here</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_settings">Settings</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">Video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Only supported on Android Lollipop and forward.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter  local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_startvideobitrate_key">startvideobitrate_preference</string>
    <string name="pref_startvideobitrate_title">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_dlg">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_default">Default</string>
    <string name="pref_startvideobitratevalue_key">startvideobitratevalue_preference</string>
    <string name="pref_startvideobitratevalue_title">Video encoder start bitrate.</string>
    <string name="pref_startvideobitratevalue_dlg">Enter video encoder start bitrate in kbps.</string>
    <string name="pref_startvideobitratevalue_default">1000</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">Audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_dlg">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Hardware AEC is not available</string>
    <string name="pref_disable_built_in_agc_key">disable_built_in_agc_preference</string>
    <string name="pref_disable_built_in_agc_title">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_dlg">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_default">false</string>
    <string name="pref_built_in_agc_not_available">Hardware AGC is not available</string>
    <string name="pref_disable_built_in_ns_key">disable_built_in_ns_preference</string>
    <string name="pref_disable_built_in_ns_title">Disable hardware NS.</string>
    <string name="pref_disable_built_in_ns_dlg">Disable hardware NS.</string>
    <string name="pref_disable_built_in_ns_default">false</string>
    <string name="pref_built_in_ns_not_available">Hardware NS is not available</string>
    <string name="pref_enable_level_control_key">enable_level_control_preference</string>
    <string name="pref_enable_level_control_title">Enable level control.</string>
    <string name="pref_enable_level_control_default">false</string>
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_title">Speakerphone.</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="pref_miscsettings_key">misc_settings_key</string>
    <string name="pref_miscsettings_title">Miscellaneous settings.</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">https://appr.tc</string>
    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Display call statistics.</string>
    <string name="pref_displayhud_dlg">Display call statistics.</string>
    <string name="pref_displayhud_default" translatable="false">false</string>
    <string name="pref_tracing_key">tracing_preference</string>
    <string name="pref_tracing_title">Debug performance tracing.</string>
    <string name="pref_tracing_dlg">Debug performance tracing.</string>
    <string name="pref_tracing_default" translatable="false">false</string>
    <string name="facebook_app_id">1829620097289826</string>
    <string name="facebook_app_name">tryName</string>
    <string name="main_page_text">eTour - Share</string>
    <string name="likeable_image">Likeable image</string>
    <string name="share_menu_title">Share</string>
    <string name="fb_login_protocol_scheme">fb1829620097289826</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>
    <string name="addTravel">Add</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="hint_userID">User ID (Login use)</string>
    <string name="hint_loginID">User ID / E-mail Address</string>
    <string name="hint_userName">User Name (Your English name)</string>
    <string name="hint_email">E-mail Address (abc@example.com)</string>
    <string name="hint_password">Password</string>
    <string name="hint_password2">Confirm Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="forgot">Forgot Password?</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
</resources>