<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/room_edittext_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/room_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/first"
            android:padding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/room_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>


        <ImageButton
            android:id="@+id/add_favorite_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="5dp"
            android:layout_toRightOf="@+id/room_edittext"
            android:layout_alignEnd="@+id/room_edittext"
            android:contentDescription="@string/add_favorite_description"
            android:background="@drawable/adduser" />
        <!-- android:background="@android:drawable/ic_input_add" />-->

        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_below="@+id/first"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/connect_button"
                android:padding="5dp"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:contentDescription="@string/connect_description"
                android:background="@drawable/stream2"/>

            <ImageButton
                android:id="@+id/receive_button"
                android:padding="5dp"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:contentDescription="@string/connect_description"
                android:background="@drawable/watch2"/>

        </LinearLayout>



    </RelativeLayout>

    <TextView
        android:id="@+id/room_listview_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:lines="1"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/friendlist"
        android:gravity="center_vertical"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/room_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_friendlist" />
    </FrameLayout>
</LinearLayout>